[tool.poetry]
name = "oop-testing"
version = "0.1.0"
description = "poetry self tuts"
authors = ["DavidMungai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bdd = "^0.2"
boto3 = "^1.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
